# bytecode_compiler

./: bytecode-compiler.cabal  temp.txt  test.txt
app/: Ast.hs  Bytecode.hs  CompilerError.hs  IR.hs  Main.hs  Opcode.hs  Parser.hs  Test.hs  TypeAnnotation.hs  Typechecker.hs  Unification.hs  VM.hs
